# sdk

./: .dockerignore  .gitignore  AGENTS.md  Cargo.toml  Justfile  LICENSE.MD  LICENSE.md  README.md  codecov.yml
.github/workflows/: ci.yml
authority/: Cargo.toml
authority/src/: db.rs  events.rs  genesis.rs  ledger.rs  lib.rs  module.rs  transaction.rs  types.rs
authority/src/tests/: ledger.rs  mod.rs  transaction.rs
bridge/: Cargo.toml
bridge/src/: events.rs  genesis.rs  ledger.rs  lib.rs  record.rs  rpc.rs  transaction.rs
bridge/src/tests/: claim.rs  genesis.rs  ledger.rs  mod.rs  record.rs
cbc/: Cargo.toml  README.md
cbc/src/: db.rs  genesis.rs  ledger.rs  lib.rs  rpc.rs  transaction.rs  types.rs
cbc/src/tests/: mod.rs
chain/: Cargo.toml
chain-macros/: Cargo.toml
chain-macros/src/: lib.rs
chain/src/: application.rs  archive.rs  block.rs  consensus.rs  engine.rs  events.rs  execution.rs  lib.rs  macros.rs  rpc.rs  startup.rs  state_sync.rs  txpool.rs
chain/src/consensus/: dkg.rs  dkg_state.rs  extension.rs
chain/src/tests/: application.rs  archive.rs  mod.rs  rpc.rs
chain/tests/: block_extension.rs  block_header.rs
clearinghouse/: Cargo.toml  README.md
clearinghouse/src/: db.rs  ledger.rs  lib.rs  settlement.rs  transaction.rs  types.rs
clearinghouse/src/tests/: mod.rs  transaction.rs
clob/: Cargo.toml  README.md
clob/src/: actor.rs  db.rs  engine.rs  extension.rs  genesis.rs  ledger.rs  lib.rs  rpc.rs  transaction.rs  types.rs
clob/src/tests/: mod.rs
coins/: Cargo.toml
coins/src/: account.rs  asset.rs  codec.rs  db.rs  events.rs  factory.rs  fees.rs  genesis.rs  ledger.rs  lib.rs  module.rs  rpc.rs  transaction.rs
coins/src/rpc/: mempool.rs
coins/src/tests/: account.rs  events.rs  genesis.rs  ledger.rs  mod.rs  rpc.rs  rpc_mempool.rs
common/: Cargo.toml
common/src/: account.rs  event.rs  events.rs  lib.rs  runtime.rs  state_db.rs  transaction.rs  txpool.rs
common/src/tests/: account.rs  event.rs  events.rs  mod.rs  state_db.rs  transaction.rs
costs/: Cargo.toml  README.md
costs/src/: db.rs  genesis.rs  grant.rs  ledger.rs  lib.rs  outcome.rs  rpc.rs  stored_value.rs  tests.rs  transaction.rs  types.rs
crypto/: Cargo.toml
crypto/src/: lib.rs
crypto/src/tests/: crypto.rs
dkg/: Cargo.toml
dkg/src/: actor.rs  consensus.rs  ingress.rs  lib.rs  protector.rs  public.rs  setup.rs  state.rs
dkg/src/orchestrator/: actor.rs  mod.rs
dkg/src/tests/: actor.rs  mod.rs  protector.rs  public.rs  state.rs
docs/: event-receipts.md  events.md
docs/queen-one/: open-questions.md  spend-event-schema-v0.proto  v1-module-map.md
examples/bridge-chain/: Cargo.toml  README.md
examples/bridge-chain/src/: engine.rs  execution.rs  lib.rs  rpc.rs  testnet.rs
examples/bridge-chain/src/tests/: mod.rs
examples/coins-chain/: Cargo.toml  Dockerfile
examples/coins-chain/deploy/: README.md  build-images.sh  compose.yaml  deploy-hosts.sh  generate-configs.sh
examples/coins-chain/monitoring/: README.md  create.sh  dashboard.json  run.sh
examples/coins-chain/src/: application.rs  block.rs  consensus.rs  engine.rs  execution.rs  genesis.rs  lib.rs  rpc.rs  runtime.rs  settlement.rs  testnet.rs  transaction.rs  txpool.rs
examples/coins-chain/src/indexer/backfiller/: producer.rs
examples/coins-chain/src/tests/: application.rs  coins.rs  genesis.json  genesis.rs  mod.rs  network.rs  rpc.rs  runtime.rs  testnet.rs  transaction.rs
examples/coins-chain/tests/: coins.rs  hermes_oracle_live.rs  rpc.rs
examples/coins-chain/tests/common/: network.rs
examples/coins-chain/tests/fixtures/: genesis.json
examples/coins/chain/: Cargo.toml  Dockerfile
examples/coins/frontend/: .gitignore  index.html  package-lock.json  (+2 more)
examples/custom-module/: Cargo.toml
examples/custom-module/src/: db.rs  events.rs  genesis.rs  ledger.rs  lib.rs  rpc.rs  tests.rs  transaction.rs
examples/custom-module/src/tests/: events.rs  ledger.rs  mod.rs  transaction.rs
examples/hermes-oracle/: Cargo.toml
examples/hermes-oracle/src/: actor.rs  hermes.rs  lib.rs
examples/template/: Cargo.toml
examples/template/src/: application.rs  block.rs  consensus.rs  engine.rs  lib.rs  namespace.rs  setup.rs
examples/template/src/dkg/: actor.rs  ingress.rs
examples/template/src/orchestrator/: actor.rs
examples/template/tests/: network.rs
examples/template/tests/common/: network.rs
examples/wallet-web/: README.md  package.json  tsconfig.json
house/: Cargo.toml  README.md
house/src/: db.rs  genesis.rs  ledger.rs  lib.rs  rpc.rs  transaction.rs  types.rs
house/src/tests/: mod.rs
lending/: Cargo.toml
lending/src/: lib.rs
mcp/: Cargo.toml
mcp/src/: client.rs  main.rs  server.rs
memclob/: Cargo.toml  README.md
memclob/src/: actor.rs  book.rs  config.rs  error.rs  lib.rs  tests.rs
mempool/: Cargo.toml
mempool/src/: actor.rs  config.rs  error.rs  lib.rs  metrics.rs  pool.rs  status.rs  testing.rs  tx.rs
mempool/src/tests/: actor.rs  mod.rs  pool.rs  status.rs  tx.rs
narae/: Cargo.toml  README.md
narae/examples/: coins-chain.toml
narae/src/: config.rs  lib.rs  main.rs  process.rs  tui.rs
oracle/: Cargo.toml
oracle/src/: db.rs  genesis.rs  ledger.rs  lib.rs  rpc.rs  transaction.rs  types.rs
oracle/src/rpc/: mempool.rs
oracle/src/tests/: mod.rs
perpetuals/: Cargo.toml  README.md  ROADMAP.md
perpetuals/src/: actor.rs  db.rs  genesis.rs  ingress.rs  ledger.rs  lib.rs  rpc.rs  transaction.rs  types.rs
perpetuals/src/rpc/: mempool.rs
perpetuals/src/tests/: genesis.rs  mod.rs  rpc.rs  transaction.rs
prds/: 2026-06-30-agenc-safe-chat-identity-reputation-prd.md  2026-06-30-prompt-injection-safe-chat-identity-reputation-prd.md  2026-07-07-hybrid-amm-design.md
rpc/: Cargo.toml
rpc/src/: lib.rs
runtime-macros/: Cargo.toml
runtime-macros/src/: lib.rs
runtime-macros/tests/: runtime_macro.rs
types/: Cargo.toml
types/src/: lib.rs
wallet/: Cargo.toml  README.md  SPEC.md
wallet/src/: client.rs  keystore.rs  lib.rs  passkey.rs  record.rs
xtask/: Cargo.toml
xtask/src/: coins_chain.rs  lib.rs  main.rs
(+54 files in other folders)
