[workspace]
members = [
    "chain",
    "types",
]
resolver = "2"

[workspace.package]
version = "2026.5.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[workspace.dependencies]
smallto-chain = { version = "2026.5.0", path = "chain" }
smallto-types = { version = "2026.5.0", path = "types" }
commonware-actor = "2026.5.0"
commonware-broadcast = "2026.5.0"
commonware-codec = "2026.5.0"
commonware-consensus = "2026.5.0"
commonware-cryptography = "2026.5.0"
commonware-formatting = "2026.5.0"
commonware-macros = "2026.5.0"
commonware-p2p = "2026.5.0"
commonware-resolver = "2026.5.0"
commonware-runtime = "2026.5.0"
commonware-storage = "2026.5.0"
commonware-stream = "2026.5.0"
commonware-utils = "2026.5.0"
commonware-math = "2026.5.0"
commonware-parallel = "2026.5.0"
thiserror = "2.0.12"
bytes = "1.7.1"
rand = "0.8.5"
futures = "0.3.31"
tracing = "0.1.41"
governor = "0.10.2"
prometheus-client = "0.24.0"

[profile.bench]
overflow-checks = true

[profile.dev]
overflow-checks = true

[profile.release]
overflow-checks = true
codegen-units = 1
lto = true

[profile.test]
overflow-checks = true
