[workspace]
members = [
    "authority",
    "common",
    "chain",
    "coins",
    "crypto",
    "dkg",
    "narae",
    "mempool",
    "oracle",
    "rpc",
    "mcp",
    "examples/template",
    "examples/coins-chain",
    "examples/custom-module",
]
resolver = "2"

[workspace.package]
version = "2026.5.0"
edition = "2021"
license = "BSL"

[workspace.dependencies]
nunchi-coins = { version = "2026.5.0", path = "coins" }
nunchi-authority = { version = "2026.5.0", path = "authority" }
nunchi-chain = { version = "2026.5.0", path = "chain" }
nunchi-common = { version = "2026.5.0", path = "common" }
nunchi-crypto = { version = "2026.5.0", path = "crypto" }
nunchi-dkg = { version = "2026.5.0", path = "dkg" }
nunchi-mempool = { version = "2026.5.0", path = "mempool" }
nunchi-oracle = { version = "2026.5.0", path = "oracle" }
nunchi-rpc = { version = "2026.5.0", path = "rpc" }
nunchi-template = { version = "2026.5.0", path = "examples/template" }
nunchi-coins-chain = { version = "2026.5.0", path = "examples/coins-chain" }
commonware-actor = "2026.5.0"
commonware-broadcast = "2026.5.0"
commonware-codec = "2026.5.0"
commonware-consensus = "2026.5.0"
commonware-cryptography = "2026.5.0"
commonware-formatting = "2026.5.0"
commonware-glue = "2026.5.0"
commonware-macros = "2026.5.0"
commonware-p2p = "2026.5.0"
commonware-resolver = "2026.5.0"
commonware-runtime = "2026.5.0"
commonware-storage = "2026.5.0"
commonware-stream = "2026.5.0"
commonware-utils = "2026.5.0"
commonware-math = "2026.5.0"
commonware-parallel = "2026.5.0"
thiserror = "2.0.12"
bytes = "1.7.1"
rand = "0.8.5"
rand_core = "0.6.4"
futures = "0.3.31"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
clap = "4.6.1"
toml = "0.9.12"
governor = "0.10.2"
prometheus-client = "0.24.0"
async-trait = "0.1.89"
jsonrpsee = { version = "0.26.0", features = ["server", "macros"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"

[profile.bench]
overflow-checks = true

[profile.release]
overflow-checks = true
codegen-units = 1
lto = true

# Speed up compilation time for dev builds by reducing emitted debug info.
# NOTE: Debuggers may provide less useful information with this setting.
# Uncomment this section if you're using a debugger.
[profile.dev]
# https://davidlattimore.github.io/posts/2024/02/04/speeding-up-the-rust-edit-build-run-cycle.html
debug = "line-tables-only"
overflow-checks = true
split-debuginfo = "unpacked"

[profile.test]
debug = "line-tables-only"
overflow-checks = true
split-debuginfo = "unpacked"
