[package]
name = "nunchi-authority"
version.workspace = true
edition.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
bytes = { workspace = true }
thiserror = { workspace = true }
nunchi-common = { workspace = true }
nunchi-crypto = { workspace = true }
commonware-codec = { workspace = true }
commonware-cryptography = { workspace = true }
commonware-formatting = { workspace = true }
commonware-macros = { workspace = true }
serde = { workspace = true }

[dev-dependencies]
commonware-runtime = { workspace = true }
