[package]
name = "nunchi-chain"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
nunchi-common = { workspace = true }
nunchi-dkg = { workspace = true }
bytes = { workspace = true }
commonware-codec = { workspace = true }
commonware-consensus = { workspace = true }
commonware-cryptography = { workspace = true }
commonware-glue = { workspace = true }
commonware-parallel = { workspace = true }
commonware-runtime = { workspace = true }
commonware-storage = { workspace = true }
commonware-utils = { workspace = true }
futures = { workspace = true }
rand = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
