[package]
name = "nunchi-clob"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Central limit order book module for Nunchi spot and derivatives execution."

[lints]
workspace = true

[features]
default = ["rpc"]
rpc = ["dep:jsonrpsee", "dep:nunchi-rpc"]

[dependencies]
async-trait = { workspace = true }
bytes = { workspace = true }
commonware-codec = { workspace = true }
commonware-cryptography = { workspace = true }
commonware-formatting = { workspace = true }
commonware-macros = { workspace = true }
commonware-p2p = { workspace = true }
commonware-runtime = { workspace = true }
futures = { workspace = true }
jsonrpsee = { workspace = true, optional = true }
nunchi-chain = { workspace = true }
nunchi-common = { workspace = true }
nunchi-crypto = { workspace = true }
nunchi-rpc = { workspace = true, optional = true }
serde = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
commonware-runtime = { workspace = true }
commonware-utils = { workspace = true }
governor = { workspace = true }
serde_json = { workspace = true }
