[package]
name = "nunchi-coins"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
bytes = { workspace = true }
thiserror = { workspace = true }
nunchi-common = { workspace = true }
commonware-codec = { workspace = true }
commonware-cryptography = { workspace = true, features = ["mocks"] }

[dev-dependencies]
commonware-runtime = { workspace = true }
