[package]
name = "nunchi-coins"
version.workspace = true
edition.workspace = true
license.workspace = true

[lints]
workspace = true

[features]
default = ["rpc"]
rpc = ["dep:nunchi-rpc", "dep:jsonrpsee", "dep:futures"]
mempool = ["dep:nunchi-mempool"]

[dependencies]
async-trait = { workspace = true }
bytes = { workspace = true }
thiserror = { workspace = true }
nunchi-common = { workspace = true }
nunchi-crypto = { workspace = true }
nunchi-mempool = { workspace = true, optional = true }
nunchi-rpc = { workspace = true, optional = true }
commonware-codec = { workspace = true }
commonware-cryptography = { workspace = true }
commonware-formatting = { workspace = true }
commonware-macros = { workspace = true }
jsonrpsee = { workspace = true, optional = true }
serde = { workspace = true }
serde_with = { workspace = true }
futures = { workspace = true, optional = true }

[dev-dependencies]
commonware-runtime = { workspace = true }
