[package]
name = "nunchi-common"
version.workspace = true
edition.workspace = true
license.workspace = true

[lints]
workspace = true

[features]
default = ["state"]
state = [
    "dep:commonware-glue",
    "dep:commonware-runtime",
    "dep:commonware-storage",
    "dep:commonware-parallel",
    "dep:commonware-utils",
]

[dependencies]
bytes = { workspace = true }
bech32 = { workspace = true }
thiserror = { workspace = true }
nunchi-crypto = { workspace = true }
commonware-codec = { workspace = true }
commonware-cryptography = { workspace = true }
commonware-glue = { workspace = true, optional = true }
commonware-macros = { workspace = true }
commonware-runtime = { workspace = true, optional = true }
commonware-storage = { workspace = true, optional = true }
commonware-parallel = { workspace = true, optional = true }
commonware-utils = { workspace = true, optional = true }
