[package]
name = "nunchi-dkg"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Reusable DKG and resharing support for Nunchi examples."

[lints]
workspace = true

[dependencies]
commonware-actor = { workspace = true }
commonware-codec = { workspace = true }
commonware-consensus = { workspace = true, features = ["mocks"] }
commonware-cryptography = { workspace = true, features = ["mocks"] }
commonware-formatting = { workspace = true }
commonware-macros = { workspace = true }
commonware-math = { workspace = true }
commonware-p2p = { workspace = true }
commonware-parallel = { workspace = true }
commonware-runtime = { workspace = true }
commonware-storage = { workspace = true }
commonware-utils = { workspace = true }
bytes = { workspace = true }
futures = { workspace = true }
rand = { workspace = true }
rand_core = { workspace = true }
# `EncodeStruct` metrics derives expand to paths under `prometheus_client`.
prometheus-client = { workspace = true }
serde = { version = "1.0.219", features = ["derive"] }
tracing = { workspace = true }

[dev-dependencies]
tracing-subscriber = { version = "0.3.19", features = ["fmt", "json"] }
