[package]
name = "nunchi-house"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "House vault module for Nunchi hybrid AMM liquidity: capital, policy caps, operating modes, and authorized submitters."

[lints]
workspace = true

[features]
default = ["rpc"]
rpc = ["dep:futures", "dep:jsonrpsee", "dep:nunchi-rpc"]

[dependencies]
async-trait = { workspace = true }
bytes = { workspace = true }
commonware-codec = { workspace = true }
commonware-cryptography = { workspace = true }
commonware-formatting = { workspace = true }
commonware-macros = { workspace = true }
futures = { workspace = true, optional = true }
jsonrpsee = { workspace = true, optional = true }
nunchi-clob = { workspace = true }
nunchi-common = { workspace = true }
nunchi-crypto = { workspace = true }
nunchi-rpc = { workspace = true, optional = true }
serde = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
commonware-runtime = { workspace = true }
serde_json = { workspace = true }
