[package]
name = "nunchi-oracle"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
default = ["state"]
state = ["nunchi-common/state"]

[dependencies]
async-trait = { workspace = true }
bytes = { workspace = true }
thiserror = { workspace = true }
nunchi-common = { workspace = true, default-features = false }
nunchi-crypto = { workspace = true }
commonware-codec = { workspace = true }
commonware-cryptography = { workspace = true }
commonware-formatting = { workspace = true }
serde = { workspace = true }

[dev-dependencies]
commonware-runtime = { workspace = true }
serde_json = { workspace = true }
