[package]
name = "nunchi-perpetuals"
version.workspace = true
edition.workspace = true
license.workspace = true

[lints]
workspace = true

[features]
default = ["rpc"]
rpc = ["dep:futures", "dep:jsonrpsee", "dep:nunchi-rpc"]
mempool = ["dep:nunchi-mempool"]

[dependencies]
async-trait = { workspace = true }
bytes = { workspace = true }
thiserror = { workspace = true }
nunchi-coins = { workspace = true }
nunchi-common = { workspace = true }
nunchi-crypto = { workspace = true }
nunchi-mempool = { workspace = true, optional = true }
nunchi-oracle = { workspace = true }
nunchi-rpc = { workspace = true, optional = true }
commonware-codec = { workspace = true }
commonware-cryptography = { workspace = true }
commonware-formatting = { workspace = true }
jsonrpsee = { workspace = true, optional = true }
serde = { workspace = true }
futures = { workspace = true, optional = true }

[dev-dependencies]
commonware-runtime = { workspace = true }
serde_json = { workspace = true }
