[package]
name = "nunchi-rpc"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
commonware-codec = { workspace = true }
commonware-formatting = { workspace = true }
jsonrpsee = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
