[package]
name = "smallto-types"
version = "2026.5.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Common types used throughout smallto."

[lib]
crate-type = ["rlib", "cdylib"]

[dependencies]
commonware-codec = { workspace = true }
commonware-consensus = { workspace = true }
commonware-cryptography = { workspace = true }
commonware-formatting = { workspace = true }
commonware-utils = { workspace = true }
commonware-parallel = { workspace = true }
bytes = { workspace = true }
rand = { workspace = true }
thiserror = { workspace = true }
serde = { version = "1.0.219", features = ["derive"] }

[dev-dependencies]
commonware-consensus = { workspace = true, features = ["mocks"] }
commonware-cryptography = { workspace = true, features = ["mocks"] }
commonware-math = { workspace = true }
