[package]
name = "nunchi-wallet"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Native Nunchi wallet framework: Bech32 CLI wallets, encrypted keystore, RPC client, and passkey types."

[lints]
workspace = true

[features]
default = ["cli", "client"]
cli = ["dep:clap", "dep:anyhow", "dep:rand", "dep:commonware-math", "dep:commonware-cryptography"]
client = ["dep:jsonrpsee", "dep:reqwest"]
passkey = []

[[bin]]
name = "nunchi-wallet"
path = "src/bin/nunchi-wallet.rs"
required-features = ["cli"]

[dependencies]
nunchi-common = { workspace = true }
nunchi-crypto = { workspace = true }
nunchi-coins = { workspace = true }
nunchi-rpc = { workspace = true }
commonware-codec = { workspace = true }
commonware-cryptography = { workspace = true, optional = true }
commonware-math = { workspace = true, optional = true }
argon2 = "0.5"
chacha20poly1305 = { workspace = true }
rand = { workspace = true, optional = true }
rand_core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
clap = { workspace = true, optional = true, features = ["derive"] }
anyhow = { version = "1", optional = true }
jsonrpsee = { workspace = true, optional = true, features = ["http-client", "macros"] }
reqwest = { version = "0.12", optional = true, features = ["json"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }

[dev-dependencies]
tempfile = "3"
