[package]
name = "nunchi-bridge-chain"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "A minimal bridge-extension chain example for Nunchi."

[dependencies]
nunchi-bridge = { workspace = true }
nunchi-chain = { workspace = true }
nunchi-common = { workspace = true }
nunchi-mempool = { workspace = true }
commonware-codec = { workspace = true }
commonware-cryptography = { workspace = true }
bytes = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
nunchi-dkg = { workspace = true }
commonware-glue = { workspace = true }
commonware-consensus = { workspace = true, features = ["mocks"] }
commonware-cryptography = { workspace = true, features = ["mocks"] }
commonware-parallel = { workspace = true }
commonware-runtime = { workspace = true }
commonware-storage = { workspace = true }
commonware-utils = { workspace = true }
futures = { workspace = true }
