[package]
name = "nunchi-bridge-chain"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "A minimal bridge-extension chain example for Nunchi."

[dependencies]
nunchi-bridge = { workspace = true }
nunchi-chain = { workspace = true }
nunchi-common = { workspace = true }
nunchi-dkg = { workspace = true }
nunchi-mempool = { workspace = true }
nunchi-rpc = { workspace = true }
commonware-actor = { workspace = true }
commonware-broadcast = { workspace = true }
commonware-codec = { workspace = true }
commonware-consensus = { workspace = true, features = ["mocks"] }
commonware-cryptography = { workspace = true }
commonware-formatting = { workspace = true }
commonware-glue = { workspace = true }
commonware-p2p = { workspace = true }
commonware-parallel = { workspace = true }
commonware-runtime = { workspace = true }
commonware-storage = { workspace = true }
commonware-utils = { workspace = true }
bytes = { workspace = true }
thiserror = { workspace = true }
futures = { workspace = true }
governor = { workspace = true }
jsonrpsee = { workspace = true, features = ["http-client"] }
rand = { workspace = true }
rand_core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter", "fmt"] }
clap = { workspace = true, features = ["derive"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal", "time"] }

[dev-dependencies]
commonware-cryptography = { workspace = true, features = ["mocks"] }
